tests/NormalTests/paczka1/small_fuzzy/55952091.err
Error in line 1: F4EDtQgy S363 47,3
Error in line 4: NhlYFCur S400 92,4
Error in line 3: F4EDtQgy S400 88,5
Error in line 12: bqx6IjRFLHV S477 22,4
